fix "refresh" banner alignment issue

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -24,11 +24,11 @@ header {
     margin-bottom: 0%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content:space-evenly;
+    align-items: center;
 }
 
 .refresh {
-    position:absolute;
     text-align: center;
     left: 0%;
     right: 0%;
